# rure

./: CHANGELOG.md  LICENSE  README.md  TODO.md  cabal.project.local  regex-rure.cabal
bench/: Bench.hs
src/Regex/: Rure.chs  Rure.hs
src/Regex/Rure/: FFI.chs
test/: Spec.hs
