cabal-version:   1.18
name:               regex-rure
version:            0.1.0.0
synopsis: Bindings to Rust's regex library
description: Bindings to Rust's regex library, including a higher-level API.

-- A URL where users can report bugs.
-- bug-reports:

license: GPL-3
license-file: LICENSE
author:             Vanessa McHale
maintainer:         vamchale@gmail.com
build-type: Simple
category: Text, Regex
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/rure

library
    exposed-modules: Regex.Rure
                     Regex.Rure.FFI

    extra-libraries: rure
    other-extensions: FlexibleContexts
    build-depends:    base >=4.3.0.0 && <5
                    , bytestring
    build-tool-depends: c2hs:c2hs >= 0.26.1
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: Haskell2010

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite regex-rure-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -Wall
    other-extensions: OverloadedStrings
    build-depends:    base
                    , tasty
                    , tasty-hunit
                    , regex-rure
                    , bytestring

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
